<resources>
    <string name="app_name">Shoe App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="or_signup_with">Or Signup with</string>
    <string name="welcome">Welcome</string>
    <string name="click_next_to_read_the_instruction">Click next to read the Instruction</string>
    <string name="instructions_text_view">1. Click start to see a list of shoes.\n2. You can use the menu to logout. Just click the three dots at the top right corner of the screen.\n3. You can add new shoes. Just click the bottom at the bottom right corner of the screen.</string>
    <string name="next">Next</string>
    <string name="start">start</string>
    <string name="login">Login</string>
    <string name="instruction">Instruction</string>
    <string name="shoe_list">Shoe List</string>
    <string name="create_a_new_shoe">create a new shoe</string>
    <string name="name_label">Name</string>
    <string name="name_edit_text_hint">please type the Shoe Name</string>
    <string name="company_label">Company</string>
    <string name="company_edit_text_hint">Please type Company Name</string>
    <string name="size_label">Size</string>
    <string name="size_edit_text_hint">please type size</string>
    <string name="description_label">Description</string>
    <string name="description_edit_text_hint">please type description</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancle</string>
    <string name="shoe_value">Shoe Name : %S</string>
    <string name="company_value">Company Name : %S</string>
    <string name="description_value">Description : %S</string>
    <string name="size_value">Size : %S</string>

</resources>