<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.shoeapp.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slie_out_right" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.shoeapp.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slie_out_right" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.example.shoeapp.InstructionFragment"
        android:label="@string/instruction"
        tools:layout="@layout/fragment_instruction" >
        <action
            android:id="@+id/action_instructionFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slie_out_right"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.example.shoeapp.ShoeListFragment"
        android:label="@string/shoe_list"
        tools:layout="@layout/fragment_shoe_list" >
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailsFragment"
            app:destination="@id/shoeDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slie_out_right"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailsFragment"
        android:name="com.example.shoeapp.ShoeDetailsFragment"
        android:label="Shoe Details"
        tools:layout="@layout/fragment_shoe_details" />
</navigation>